--- a/ServerRemote/static/index.html
+++ b/ServerRemote/static/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>ServerRemote</title>
+	<script src="lib/app.js" type="module"></script>
 </head>
 <body>
-
+	<div id="test"></div>
 </body>
 </html>
