--- a/ServerRemote/client/index.html
+++ b/ServerRemote/client/index.html
@@ -15,8 +15,8 @@
 				Todo: add buttons for actions and action editor
 			</div>
 		</div>
-		<div style="flex: 0 0 20px" class="shadow padding">
-
+		<div style="flex: 0 0 20px" class="shadow padding" id="statusbar">
+			Pending messages: <span style="width: 100px" id="pendingShow">...</span>
 		</div>
 	</div>
 </body>
