Added state button

--- a/ServerRemote/client/index.html
+++ b/ServerRemote/client/index.html
@@ -16,6 +16,7 @@
 			</div>
 		</div>
 		<div style="flex: 0 0 20px" class="shadow padding" id="statusbar">
+			<button id="stateButton">▶</button>
 			Pending messages: <span style="width: 100px" id="pendingShow">...</span>
 		</div>
 	</div>
