--- a/ServerRemote/client/index.html
+++ b/ServerRemote/client/index.html
@@ -14,7 +14,7 @@
 				<textarea class="monospace flex-fill" style="resize: none; color: white; background-color: black" readonly id="console"></textarea>
 				<input id="stdin" />
 			</div>
-			<div class="flex-fill" style="margin-left: 10px">
+			<div style="margin-left: 10px; flex: 0 1 200px">
 				Todo: add buttons for actions and action editor
 			</div>
 		</div>
