Made the input field fit with the console style

--- a/ServerRemote/client/index.html
+++ b/ServerRemote/client/index.html
@@ -12,7 +12,7 @@
 		<div class="padding flex-fill flex-x">
 			<div style="flex: 1 1;" class="flex-y">
 				<textarea class="monospace flex-fill" style="resize: none; color: white; background-color: black" readonly id="console"></textarea>
-				<input id="stdin" />
+				<input id="stdin" class="monospace" style="color: white; background-color: black; border-top: none" />
 			</div>
 			<div style="margin-left: 10px; flex: 0 1 200px">
 				Todo: add buttons for actions and action editor
