--- a/ServerRemote/client/index.html
+++ b/ServerRemote/client/index.html
@@ -14,8 +14,11 @@
 				<textarea class="monospace flex-fill" style="resize: none; color: white; background-color: black" readonly id="console"></textarea>
 				<input id="stdin" class="monospace" style="color: white; background-color: black; border-top: none" />
 			</div>
-			<div style="margin-left: 10px; flex: 0 1 200px" id="actions">
-				
+			<div style="margin-left: 10px; flex: 0 1 200px">
+				Actions<br />
+				<div id="actions">
+
+				</div>
 			</div>
 		</div>
 		<div style="flex: 0 0 20px" class="shadow padding" id="statusbar">
